Getting bigquery in place

--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNON9C+liTeqTbwrz1E6LgP",
+      "authorship_tag": "ABX9TyO5WogrbyC81pRYDxYndroc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,12 +59,30 @@
         "# Additional tools to be added here\n",
         "\n",
         "import kagglehub\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from google.cloud import bigquery"
       ],
       "metadata": {
         "id": "QkTBcPXClw-E"
       },
-      "execution_count": 5,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# BigQuery Client\n",
+        "client = bigquery.Client()\n",
+        "\n",
+        "# US Census Data\n",
+        "\n",
+        "us_census_ref = client.getdataset()"
+      ],
+      "metadata": {
+        "id": "6ILyaaNciBPN"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -174,7 +192,7 @@
         "id": "11I71ilTfyzX",
         "outputId": "4020d510-9382-45ac-a46e-05f7e74655ee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +218,7 @@
         "id": "CIX8cyN1NYf0",
         "outputId": "732b71ca-171e-4259-df8d-d0ab11805453"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +680,7 @@
         "id": "hMESTzqVU5rN",
         "outputId": "346e049e-1e4d-4d95-b794-053c7c04286f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1118,7 @@
         "id": "JltcteoeVXhR",
         "outputId": "d95facbf-686f-4ddf-c358-3eb21ce57741"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1269,7 @@
       "metadata": {
         "id": "wPBkljkLUnSe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
