Added authentication agent for colab to enable bigquery

--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO5jmbcOICKQONw/pnPxa+B",
+      "authorship_tag": "ABX9TyNHM0cFj2iIF6j40fNDz91V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,12 +60,15 @@
         "import kagglehub\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from google.cloud import bigquery"
+        "from google.cloud import bigquery\n",
+        "from google.colab import auth\n",
+        "\n",
+        "auth.authenticate_user()"
       ],
       "metadata": {
         "id": "QkTBcPXClw-E"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -82,7 +84,10 @@
         "\n",
         "\n",
         "#The primary error here is the extraction. I will need to link an account from Google Big Query.\n",
-        "#I want to avoid high costs by extracting one time and pulling to account from a csv that is created and stored"
+        "#I want to avoid high costs by extracting one time and pulling to account from a csv that is created and stored\n",
+        "\n",
+        "\n",
+        "#Dataform API to"
       ],
       "metadata": {
         "id": "6ILyaaNciBPN",
