More bigquery shenanigans

--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHM0cFj2iIF6j40fNDz91V",
+      "authorship_tag": "ABX9TyNPaR7Td7hAdHHXhnLHGfiZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,20 +68,20 @@
       "metadata": {
         "id": "QkTBcPXClw-E"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# BigQuery Client\n",
+        "project_id = 'triple-ranger-445620-n1.bigquery-public-data.us_res_real_est_data'\n",
         "\n",
-        "client = bigquery.Client()\n",
+        "client = bigquery.Client(project=project_id)\n",
         "\n",
         "# US Census Data\n",
         "us_census_ref = client.dataset('census_bureau_usa', project='bigquery-public-data')\n",
         "us_census_dataset = client.get_dataset(us_census_ref)\n",
-        "\n",
         "\n",
         "#The primary error here is the extraction. I will need to link an account from Google Big Query.\n",
         "#I want to avoid high costs by extracting one time and pulling to account from a csv that is created and stored\n",
