--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzg29ukuWF/Q29Zhk/a5Q5",
+      "authorship_tag": "ABX9TyP4No29oeJEyFmRnQ8MHCVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -539,6 +539,15 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The information above doensn't quite make sense for what I'm doing and so I will explore other census data that might have a little more granularity."
+      ],
+      "metadata": {
+        "id": "0hNxfa2s09I7"
+      }
     },
     {
       "cell_type": "markdown",
